<resources>
    <!--Metadata-->
    <string name="app_name">Previously</string>
    <string name="build_date">17 December 2017</string>
    <string name="author">Paul Wong</string>

    <!--Main menu items-->
    <string name="action_sort">Sort&#8230;</string>
    <string name="action_notify">Set notification</string>
    <string name="action_export">Export data</string>
    <string name="action_restore">Restore data</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!--Sort dialog-->
    <string name="pref_title_sort_field">Sort events</string>
    <string name="dialog_sort_field_label">Sort events by&#8230;</string>
    <string-array name="pref_sort_field_titles">
        <item>Event name</item>
        <item>Last performed date</item>
        <item>Next due date</item>
    </string-array>
    <string-array name="pref_sort_field_values">
        <item>name</item>
        <item>date</item>
        <item>nextDue</item>
    </string-array>
    <string name="dialog_sort_button_text">Sort</string>
    <string name="dialog_cancel_button_text">Cancel</string>

    <!--Restore dialog-->
    <string name="dialog_restore_title">Restore data from&#8230;</string>

    <!--Edit screen-->
    <string name="add_event">Add event</string>
    <string name="edit_event">Edit event</string>
    <string name="update_event">Update event</string>
    <string name="action_save_event">Save</string>
    <string name="event_name_label">Event name</string>
    <string name="event_name_hint">Describe the task</string>
    <string name="event_date_label">Date</string>
    <string name="event_category_label">Category</string>
    <string name="event_period_label">Repeat period</string>
    <string name="event_period_hint">[in days]</string>
    <string name="event_notes_label">Notes</string>
    <string name="event_notes_hint">Optional</string>
    <string name="toast_check_inputs">Event name and date must be filled in</string>

    <!--Info screen-->
    <string name="card_info">Info</string>
    <string name="event_no_repeat">Does not repeat</string>
    <string name="not_applicable">N/A</string>
    <string name="event_period" translatable="false">%1$d %2$s</string>
    <string name="unit_days">days</string>
    <string name="event_next_due_label">Next due</string>
    <string name="event_notes_blank">Nothing yet. Tap to add.</string>

    <string name="card_stats">Statistics</string>
    <string name="stats_count_label">Count</string>
    <string name="stats_interval_label">Average interval</string>

    <string name="card_history">History</string>
    <string name="action_mark_done">Mark as done</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete selected instance</string>

    <string name="bottom_sheet_add_note_hint">Add notes</string>

    <!--About screen-->
    <string name="about_version">Version</string>
    <string name="about_build_date">Build date</string>
    <string name="about_copyright">Copyright © 2016–17</string>

    <!--Settings-->
    <string name="title_activity_settings">Settings</string>
    <string name="action_email_feedback">Contact developer</string>

    <string name="pref_category_display">Display</string>
    <string name="pref_title_warning_period">Warning period (in days)</string>
    <string name="pref_default_warning_period">7</string>

    <string name="pref_title_secondary_sort">Sort order for non-repeating events</string>
    <string-array name="pref_secondary_sort_titles">
        <item>Event name</item>
        <item>Last performed date</item>
    </string-array>
    <string-array name="pref_secondary_sort_values">
        <item>name</item>
        <item>date</item>
    </string-array>

    <string name="pref_category_ui">User interface</string>
    <string name="pref_title_date_behaviour">Primary date behaviour</string>
    <string-array name="pref_date_behaviour_titles">
        <item>Show date selector</item>
        <item>Default to today</item>
    </string-array>
    <string-array name="pref_default_date_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!--Settings: Notifications-->
    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_title_notifications">Enable notifications</string>
    <string name="pref_description_notifications">Show event reminders</string>
    <string name="pref_title_notification_time">Reminder time (hour of day)</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <!--Miscellaneous-->
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!-- ************************************************************** Samples (can be deleted) -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
</resources>
