<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nightcap.previously.MainActivity">
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="1"
        android:title="@string/action_sort"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_notify"
        android:orderInCategory="2"
        android:title="@string/action_notify"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:orderInCategory="3"
        android:title="@string/action_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_restore"
        android:orderInCategory="4"
        android:title="@string/action_restore"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
