<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_event_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCardBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nightcap.previously.EventInfoActivity"
    tools:showIn="@layout/activity_event_info">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!--General info/settings card-->
        <android.support.v7.widget.CardView
            android:id="@+id/card_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:elevation="@dimen/card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_padding">

                <TextView
                    android:id="@+id/card_title_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/about_text_margin"
                    android:text="@string/card_info"
                    style="@style/TextAppearance.AppCompat.Title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_period_label"
                        android:textSize="@dimen/text_size_normal"
                        android:textStyle="bold"
                        android:layout_gravity="start"/>
                    <TextView
                        android:id="@+id/card_info_period_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_normal"
                        android:layout_gravity="end"
                        android:gravity="end"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_next_due_label"
                        android:textSize="@dimen/text_size_normal"
                        android:textStyle="bold"
                        android:layout_gravity="start"/>
                    <TextView
                        android:id="@+id/card_info_next_due_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_normal"
                        android:layout_gravity="end"
                        android:gravity="end"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!--History card showing past instances-->
        <android.support.v7.widget.CardView
            android:id="@+id/card_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_info"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:elevation="@dimen/card_elevation">
            <!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/card_padding">

                <!--App info-->
                <TextView
                    android:id="@+id/card_title_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/card_padding"
                    android:layout_marginBottom="4dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/card_history"
                    style="@style/TextAppearance.AppCompat.Title" />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/history_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/card_title_history"
                    android:scrollbars="vertical"
                    android:layout_alignParentStart="true" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <!--Statistics card-->
        <android.support.v7.widget.CardView
            android:id="@+id/card_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_history"
            android:layout_marginBottom="72dp"
            android:elevation="@dimen/card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_padding">

                <TextView
                    android:id="@+id/card_title_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/about_text_margin"
                    android:text="@string/card_stats"
                    style="@style/TextAppearance.AppCompat.Title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stats_count_label"
                        android:textSize="@dimen/text_size_normal"
                        android:textStyle="bold"
                        android:layout_gravity="start"/>
                    <TextView
                        android:id="@+id/card_stats_count_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_normal"
                        android:layout_gravity="end"
                        android:gravity="end"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stats_interval_label"
                        android:textSize="@dimen/text_size_normal"
                        android:textStyle="bold"
                        android:layout_gravity="start"/>
                    <TextView
                        android:id="@+id/card_stats_interval_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_normal"
                        android:layout_gravity="end"
                        android:gravity="end"/>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>
