<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nightcap.previously.EditActivity"
    tools:showIn="@layout/activity_edit">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:scrollbars="none">

        <!--Category-->
        <RelativeLayout
            android:id="@+id/category_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true">
            <ImageView
                android:id="@+id/image_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/event_icon_margin"
                android:paddingTop="@dimen/event_icon_margin"
                app:srcCompat="@drawable/ic_event_category"/>
            <TextView
                android:id="@+id/label_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/image_category"
                android:layout_marginStart="@dimen/label_adjustment"
                android:text="@string/event_category_label"
                android:textColor="@color/colorAccent" />
            <EditText
                android:id="@+id/event_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_category"
                android:layout_toEndOf="@+id/image_category"
                android:inputType="textAutoCorrect|textMultiLine|textCapSentences"
                android:minLines="1"
                android:maxLines="4"
                android:hint="@null"
                android:textColorHint="?android:attr/textColorHint" />
        </RelativeLayout>

        <!--Period-->
        <RelativeLayout
            android:id="@+id/period_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/category_input"
            android:layout_marginTop="@dimen/label_margin"
            android:layout_alignParentStart="true">
            <ImageView
                android:id="@+id/image_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/event_icon_margin"
                android:paddingTop="@dimen/event_icon_margin"
                app:srcCompat="@drawable/ic_event_period" />
            <TextView
                android:id="@+id/label_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/image_period"
                android:layout_marginStart="@dimen/label_adjustment"
                android:text="@string/event_period_label"
                android:textColor="@color/colorAccent" />
            <EditText
                android:id="@+id/event_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_period"
                android:layout_toEndOf="@id/image_period"
                android:ems="10"
                android:selectAllOnFocus="true"
                android:inputType="number"
                android:hint="@string/event_period_hint"
                android:textColorHint="?android:attr/textColorHint"/>
        </RelativeLayout>

        <!--Notes-->
        <RelativeLayout
            android:id="@+id/notes_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/period_input"
            android:layout_marginTop="@dimen/label_margin"
            android:layout_alignParentStart="true">
            <ImageView
                android:id="@+id/image_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/event_icon_margin"
                android:paddingTop="@dimen/event_icon_margin"
                app:srcCompat="@drawable/ic_event_notes"/>
            <TextView
                android:id="@+id/label_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/image_notes"
                android:layout_marginStart="@dimen/label_adjustment"
                android:text="@string/event_notes_label"
                android:textColor="@color/colorAccent" />
            <EditText
                android:id="@+id/event_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_notes"
                android:layout_toEndOf="@+id/image_notes"
                android:inputType="textAutoCorrect|textMultiLine|textCapSentences"
                android:minLines="1"
                android:maxLines="4"
                android:hint="@string/event_notes_hint"
                android:textColorHint="?android:attr/textColorHint" />
        </RelativeLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
